# fastapi-project

./: .gitignore  README.md  WARP.md  pyproject.toml  sql_app.db
app/: auth.py  db.py  images.py  main.py  models.py  schemas.py
frontend/: index.html  login.html  package-lock.json  package.json  post.html  register.html  upload.html
frontend/css/: styles.css
frontend/js/: api.js  auth.js  gallery.js  post.js  upload.js
tests/: TEST_SUMMARY.md  test_main.py
