[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.120.3",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
